comecei a escrever o conteude

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>
     <main>
         <header>
-            <h1>Titutolo</h1>
+            <h1>Cursos grais</h1>
         </header>
         <article>
-            <h2>Artigo 011</h2>
-            <p>texto</p>
+            <h2>curso html5 css3</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla eligendi dolores deserunt officiis quae. Distinctio labore tempore tenetur atque earum ullam vel. Cupiditate pariatur iure tempora nesciunt impedit veniam? Quas!</p>
         </article>
         <article>
-            <h2>Artigo 022</h2>
-            <p>texto2</p>
+            <h2>curso javascript</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas in veritatis illum non veniam ducimus provident sunt quas magni deleniti perferendis quisquam a debitis quae voluptate obcaecati, animi ipsam vel!</p>
         </article>
     </main>
 </body>
