--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
         </header>
         <article>
             <h2>curso html5 css3</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla eligendi dolores deserunt officiis quae. Distinctio labore tempore tenetur atque earum ullam vel. Cupiditate pariatur iure tempora nesciunt impedit veniam? Quas!</p>
+            <p>an?</p>
         </article>
         <article>
-            <h2>curso javascript</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas in veritatis illum non veniam ducimus provident sunt quas magni deleniti perferendis quisquam a debitis quae voluptate obcaecati, animi ipsam vel!</p>
+            <h2>js</h2>
+            <p>iai pai tú ta onde</p>
         </article>
     </main>
 </body>
